Correction on media file caption visibility at lower resolutions (override in KrakeAdmin of a media query hiding the title of media files)

--- a/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
+++ b/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
@@ -11630,8 +11630,9 @@ ul.widgets h3 {
 }
 /*Media Library*/
 
-.media-library-main-list-overlay p {
+.media-library-main-list-overlay {
     margin: 0;
+    display: block;
 }
 
 #media-library-main-editor {
